# instance-generators

./: .gitignore  README.md  graph_features.json  performance_metrics_ga.csv  pyproject.toml  setup.py
best_graphs/: gen_1_idx_9_fit_-1.72.pkl  gen_37_idx_3_fit_-0.45.pkl  gen_3_idx_2_fit_-0.86.pkl
instances_final/: four_regular_graph_target_point_-1.4848292627429007_-2.0194954251873494_final_population_graph_12.pkl  four_regular_graph_target_point_-1.4848292627429007_-3.0194954251873494_final_population_graph_34.pkl  four_regular_graph_target_point_-2.4848292627429007_-1.0194954251873494_final_population_graph_29.pkl  four_regular_graph_target_point_-2.4848292627429007_-2.0194954251873494_best_graph_gen_448.pkl  four_regular_graph_target_point_-2.4848292627429007_-2.0194954251873494_final_population_graph_21.pkl  four_regular_graph_target_point_-2.4848292627429007_-3.0194954251873494_best_graph_gen_994.pkl  four_regular_graph_target_point_-2.4848292627429007_-4.019495425187349_final_population_graph_19.pkl  four_regular_graph_target_point_-3.4848292627429007_-3.0194954251873494_final_population_graph_1.pkl  four_regular_graph_target_point_-4.484829262742901_-3.0194954251873494_final_population_graph_3.pkl  geometric_target_point_-0.4848292627429007_1.9805045748126506_best_graph_gen_0.pkl  geometric_target_point_-0.4848292627429007_1.9805045748126506_final_population_graph_1.pkl  geometric_target_point_-0.4848292627429007_2.9805045748126506_best_graph_gen_0.pkl  geometric_target_point_-0.4848292627429007_2.9805045748126506_final_population_graph_6.pkl  geometric_target_point_-0.4848292627429007_6.980504574812651_best_graph_gen_0.pkl  geometric_target_point_-1.4848292627429007_-7.019495425187349_final_population_graph_28.pkl  geometric_target_point_-1.4848292627429007_3.9805045748126506_best_graph_gen_0.pkl  geometric_target_point_-1.4848292627429007_3.9805045748126506_best_graph_gen_266.pkl  geometric_target_point_-1.4848292627429007_3.9805045748126506_final_population_graph_36.pkl  (+427 more)
(+23 files in other folders)
