[tool.poetry]
name = "instance-generators"
version = "0.1.0"
description = "Generate new instances from ISA"
authors = ["Vivek Katial <vivekkatial@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.31.1"
watchdog = "^4.0.0"
seaborn = "^0.13.2"
pandas = "^2.2.0"
matplotlib = "^3.8.2"
shapely = "^2.0.2"
scipy = "^1.12.0"
numpy = "^1.26.4"
pynauty = "^2.8.6"
networkx = "2.8.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
